# sonar_array

./: CMakeLists.txt  package.xml  readme.md
data/: dcm_new_data.txt  s1_dcm_fit.txt  s2_dcm_fit.txt  s3_dcm_fit.txt  s4_dcm_fit.txt  sonic_array_exp.txt  sonic_dcm_fit.py
include/sonar_array/: sonar_reader.h
launch/: sonar_array.launch
src/: sonar_reader.cpp  sonar_reader_node.cpp
test/: CMakeCache.txt  CMakeLists.txt  Main  Makefile  cmake_install.cmake  crcCompute.cpp  crcCompute.h  crc_test.cpp  test_crc.py
